--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font: 14px "Century Gothic", Futura, sans-serif;
+  margin: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ol, ul {
+  padding-left: 30px;
 }
+
+input {
+    padding: 10px 20px;
+}
+
+.todo-item {
+    display: flex;
+    border: 1px solid #999;
+    padding: 10px;
+    justify-content: space-between;
+}
+
+.todo-list {display: inline-block;width: 240px;}
