--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,18 @@ input {
     justify-content: space-between;
 }
 
-.todo-list {display: inline-block;width: 240px;}
+.todo-close {
+	cursor: pointer;
+}
+
+.todo-list {
+	display: inline-block;
+	width: 640px;
+}
+
+.todo-title small {
+    background: #e6e6e6;
+    padding: 5px 7px;
+    font-size: 10px;
+    border-radius: 3px;
+}
